config-driven-services - some testing partially completed.